Add full-screen linear view modal

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,10 @@
       <textarea id="text"></textarea>
     </section>
   </main>
+  <div id="modal">
+    <button id="closeModal">Close</button>
+    <pre id="modalList"></pre>
+  </div>
   <script src="https://unpkg.com/vis-network/dist/vis-network.min.js"></script>
   <script type="module" src="../src/main.js"></script>
 </body>
