Add toggleable linear view modal

--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,8 @@
       <textarea id="text"></textarea>
     </section>
   </main>
-  <div id="modal">
-    <button id="closeModal">Close</button>
+  <div id="modal" role="dialog" aria-modal="true">
+    <button id="closeModal" aria-label="Close linear view">Close</button>
     <pre id="modalList"></pre>
   </div>
   <script src="https://unpkg.com/vis-network/dist/vis-network.min.js"></script>
