Add node color customization

--- a/help.html
+++ b/help.html
@@ -30,6 +30,7 @@
     <li>Configure API settings under <strong>AI Settings</strong> in the floating menu.</li>
     <li>The cloud icon generates suggestions for how the story might continue.</li>
     <li>The spell check icon proofreads the current text.</li>
+    <li>The color square lets you change the background of the selected node.</li>
   </ul>
 </body>
 </html>
