--- a/help.html
+++ b/help.html
@@ -14,6 +14,7 @@
     <li>Click on an empty area of the graph to create a new node.</li>
     <li>Edit the title and body text directly inside the node.</li>
     <li>Type <code>#001</code> to create a reference or use Markdown links such as <code>[Continue → #002](#002)</code>.</li>
+    <li>Use the color square in the editor toolbar to change a node's background color.</li>
   </ul>
   <h2>Managing Projects</h2>
   <ul>
@@ -25,12 +26,17 @@
   <ul>
     <li>Choose <strong>Play</strong> from the floating menu to read through the story starting from the current node.</li>
   </ul>
+  <h2>Themes</h2>
+  <ul>
+    <li>Toggle between dark and light mode using the button in the header.</li>
+  </ul>
+  <!--
   <h2>AI Features</h2>
   <ul>
     <li>Configure API settings under <strong>AI Settings</strong> in the floating menu.</li>
     <li>The cloud icon generates suggestions for how the story might continue.</li>
     <li>The spell check icon proofreads the current text.</li>
-    <li>The color square lets you change the background of the selected node.</li>
   </ul>
+  -->
 </body>
 </html>
